--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,8 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "eslint": "^8.31.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
-    "nodemon": "^2.0.15"
-  }
+    "nodemon": "^2.0.15",
+    "prettier": "^2.8.2"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1"
+  },
+  "extends": [
+    "plugin:prettier/recommended"
+  ]
 }
