--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
